# indra-belief-model

./: .gitignore  README.md  pyproject.toml
research/: belief_instrument_task_graph.md  pipeline_in_viewer_task_graph.md  rasmachine_deep_dive_sketch.md  rasmachine_task_graph.md  s1_gate.md  s4_gate.md  s7_gate.md  s9_gate.md  s_phase_doctrine.md  s_phase_ship.md  t1_gate.md  t2_review.md  t3_review.md  t4_review.md  t6_gate.md  t8_gate.md  t_phase_doctrine.md  t_phase_ship.md  u10_review.md  u11_gate.md  u13_gate.md  u1_gate.md  u2_kg_analysis.md  u3_review.md  u4_review.md  u5_review.md  u6_review.md  u7_review.md  u8_review.md  u9_review.md  u_phase_doctrine.md  u_phase_ship.md  v1_gate.md  v4_5_corpus_inventory.md  v5_data_prep_doctrine.md  v5_gate.md  v5r_data_prep_doctrine.md  v5r_gate.md  v6a_substrate_lfs_log.md  v6b_clean_lfs_log.md  (+15 more)
scripts/: ablation_runner.py  analyze_n9_log.py  benchmark_composition.py  benchmark_realistic_gate.py  build_dec_calibration.py  build_holdout.py  calibrate_grounding.py  ceiling_analysis.py  ceiling_analysis_v2.py  check_contamination.py  check_no_version_labels.py  classify_fns.py  diagnose_l_fns_det.py  evaluate.py  gold_audit_prep.py  m13_analyze.py  n9_analyze.py  p_phase_analyze.py  prepare_dataset.py  q5_analyze.py  q7_error_profile.py  q7_running.py  q_phase_analyze.py  realistic_gate_results.json  run_baseline.py  run_s_holdout.py  run_t_phase_probe.py  run_u_phase_probe.py  s11_ship_verdict.py  s8_stratified_probe.py  simulate_t63_lift.py  v10_eval_relation_axis.py  v10c_eval_with_prior.py  v6b_sanity_check.py  (+9 more)
(+236 files in other folders)
